--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
     
 <body>
    
+    <div class="todo-wrapper">
+        <h2>Mi lista de tareas</h2>
+        <form name="todo-adder">
+            <input type="text" id="todo-entry-box" />
+        </form>
+   
+        <button id="add-button" class="pretty-button">Agregar</button>
+        <button id="eventButton">Borrar lista</button>
+        <ol id="todo-list">
+        </ol>
+    </div>
 
-
-
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="JS/script.js"> </script>
 
 </body>
