--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <ol id="todo-list">
         </ol>
     </div>
+<container id="catalogo"></container> 
 
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="JS/script.js"> </script>
+<script src="JS/proyecto.js"> </script>
 
 </body>
 
