--- a/JS/fetcjindex.html
+++ b/JS/fetcjindex.html
@@ -8,8 +8,9 @@
     
 <body>
     <div id="catalogo"></div>
-    <script src="fetcjproject.js"> </script>
-
+    <script src="proyectoFinal.js"> </script>
+    <buttonMas id=" buttonMas">+</buttonMas>
+    <buttonMenos id="buttonMenos">-</buttonMenos>
 
 </body>
 
